updated to fetch from heroku server instead of local host

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     resultContainer.style.display = 'none';
 
     // Fetch data from the backend
-    fetch('http://127.0.0.1:5000/generate', {
+    fetch('https://chesslyzer-app-51eb54138df6.herokuapp.com/generate', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
