Fix API endpoint URL for production

--- a/public/index.html
+++ b/public/index.html
@@ -283,7 +283,8 @@
     resultContainer.style.display = 'none';
 
     // Fetch data from the backend
-    fetch('http://127.0.0.1:5000/generate', {
+    // fetch('http://127.0.0.1:5000/generate', {
+    fetch('/generate', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
